sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_false_departpos/errors.duarouter
Error: Invalid departPos definition for vehicle '1'
Quitting (on error).
